# hilbert

./: .gitignore  Display.hs  Main.hs  Parser.hs  Prover.hs  README.md  Rules.hs  TreeWidget.hs  UIModel.hs  Vec.hs  View.hs  VtyCamera.hs  addition.fohil  hilbert.cabal
examples/: MIU.hil  addition.hil  addition2.hil  parens.hil  proplogic-nn.hil  proplogic.hil  stlc.hil
talk/: talk.org
