name:                hilbert
version:             0.1.0.0
synopsis:            A graphical, beginner's theorem prover for Haskell based on natural deduction
description:         Please see the README available on GitHub for detailed information.
homepage:            http://github.com/liamoc/hilbert
license:             BSD3
license-file:        LICENSE
author:              Liam O'Connor-Davis
maintainer:          me@liamoc.net
category:            Math
build-type:          Simple
cabal-version:       >=1.8

executable hilbert
  main-is: Main.hs             
  -- other-modules:       
  build-depends:       base >=4.6, split >=0.2, containers >=0.5, text >=0.11, vty >=4.7,vty-ui >= 1.6
