name:                hilbert
version:             0.2.0.0
synopsis:            A graphical, beginner's theorem prover for Haskell based on natural deduction
description:         Please see the README available on GitHub for detailed information.
homepage:            http://github.com/liamoc/hilbert
license:             BSD3
license-file:        LICENSE
author:              Liam O'Connor-Davis
maintainer:          me@liamoc.net
category:            Math
build-type:          Simple
cabal-version:       >=1.8

executable hilbert
  main-is: Main.hs             
  -- other-modules:       
  ghc-options: -threaded
  build-depends:       base >=4.6, split >=0.2, containers >=0.5, text >=0.11, vty >=5.1, parsec>=3.1, either>=4.3, mtl >=2.1, data-default>=0.5
